fix overflow issue by removing clearfix mixin

--- a/app/assets/stylesheets/partials/_listing.scss
+++ b/app/assets/stylesheets/partials/_listing.scss
@@ -22,7 +22,6 @@ section.listing {
   }
 
   div.item {
-    @include clearfix;
     margin: em(40) 0;
     padding: 1em;
 
